# VCF_Comparisons

./: .gitignore  README.md
indels/: CMakeLists.txt  CompareVCFs.h  HapMap_truth_set.h  ProcessVCF.h  main.cpp
multistats/: CMakeLists.txt  CompareVCFs.h  HapMap_truth_set.h  ProcessVCF.h  main.cpp  processvcfstats.h
snp/: CMakeLists.txt  CompareVCFs.h  HapMap_truth_set.h  ProcessVCF.h  main.cpp  processvcfstats.h
